prevent image overflow

--- a/style.css
+++ b/style.css
@@ -70,6 +70,7 @@ h1, h2, h3, p {
 /* set the left columns sizes to be justified near the middle column */
 .left {
     margin-left:15%;
+
     /* background-color: rgb(228, 247, 215); */
 
 }
@@ -77,6 +78,7 @@ h1, h2, h3, p {
 /* set the right columns sizes to be justified near the middle column */
 .right {
     margin-right:15%;
+
     /* background-color: rgb(228, 247, 215); */
 }
 
@@ -127,6 +129,8 @@ h1, h2, h3, p {
     margin-left: auto;
     margin-right: auto;
     border: 2px solid rgb(152, 91, 209);
+    max-width: 100%; /* Prevent container overflow */
+
 }
 
 .contact-info-list {
